tests/ui/const-generics/defaults/mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/mismatch.rs:7:26
   |
LL |     let e: Example<13> = ();
   |            -----------   ^^ expected `Example<13>`, found `()`
   |            |
   |            expected due to this
   |
   = note: expected struct `Example<13>`
           found unit type `()`

error[E0308]: mismatched types
  --> $DIR/mismatch.rs:10:32
   |
LL |     let e: Example2<u32, 13> = ();
   |            -----------------   ^^ expected `Example2<u32, 13>`, found `()`
   |            |
   |            expected due to this
   |
   = note: expected struct `Example2<u32, 13>`
           found unit type `()`

error[E0308]: mismatched types
  --> $DIR/mismatch.rs:13:32
   |
LL |     let e: Example3<13, u32> = ();
   |            -----------------   ^^ expected `Example3<13>`, found `()`
   |            |
   |            expected due to this
   |
   = note: expected struct `Example3<13>`
           found unit type `()`

error[E0308]: mismatched types
  --> $DIR/mismatch.rs:16:26
   |
LL |     let e: Example3<7> = ();
   |            -----------   ^^ expected `Example3<7>`, found `()`
   |            |
   |            expected due to this
   |
   = note: expected struct `Example3<7>`
           found unit type `()`

error[E0308]: mismatched types
  --> $DIR/mismatch.rs:19:26
   |
LL |     let e: Example4<7> = ();
   |            -----------   ^^ expected `Example4<7, 4>`, found `()`
   |            |
   |            expected due to this
   |
   = note: expected struct `Example4<7, 4>`
           found unit type `()`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0308`.
